<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
    
<!-- 	<parent> -->
<!-- 		<groupId>org.polymap</groupId> -->
<!-- 		<artifactId>org.polymap.parent</artifactId> -->
<!-- 		<version>1.0.0-SNAPSHOT</version> -->
<!-- 	</parent> -->

    <groupId>org.polymap</groupId>
	<artifactId>model2</artifactId>
    <packaging>jar</packaging>
	<version>3.0.2-areca-SNAPSHOT</version>

    <!-- Properties -->
    <properties>
        <java.version>13</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Dependencies -->
    <dependencies>
        <dependency>
            <groupId>areca</groupId>
            <artifactId>areca.common</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>areca</groupId>
            <artifactId>areca.rt.teavm</artifactId>  <!-- TIndexedDbStore -->
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
<!--         <dependency> -->
<!--             <groupId>org.apache.commons</groupId> -->
<!--             <artifactId>commons-lang3</artifactId> -->
<!--             <version>3.3.2</version> -->
<!--         </dependency> -->
    </dependencies>

    <!-- Build -->
    <build>
        <sourceDirectory>src/</sourceDirectory>
<!--         <testSourceDirectory>src-test/</testSourceDirectory> -->

        <plugins>
            <!-- Java compiler -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>**/store/tidbstore/indexeddb/**</exclude>
                                <exclude>**/runtime/event/**</exclude>
                                <exclude>**/runtime/locking/PessimisticLocking.java</exclude>
                                <exclude>**/runtime/locking/MrowPessimisticLocking.java</exclude>
                                <exclude>**/runtime/locking/OneReaderPessimisticLocking.java</exclude>
                                <exclude>**/runtime/locking/OptimisticLocking.java</exclude>
                                <exclude>**/BidiAssociationConcern.java</exclude>
                                <exclude>**/BidiManyAssociationConcern.java</exclude>
                                <exclude>**/ComputedAssociation.java</exclude>
                                <exclude>**/ComputedBidiAssocation.java</exclude>
                                <exclude>**/ComputedBidiManyAssocation.java</exclude>
                                <exclude>**/ComputedManyAssociation.java</exclude>
                            </excludes>
                            <annotationProcessors>
                                <annotationProcessor>areca.common.reflect.ReflectAnnotationProcessor</annotationProcessor>
                            </annotationProcessors>
                        </configuration>
                   </execution>
                </executions>
            </plugin>
            
            <!-- Sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <attach>true</attach>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>bintray-model2</id>
            <url>https://api.bintray.com/maven/fb71/model2/model2-dev/;publish=1</url>
        </repository>
    </distributionManagement>
    
</project>